<resources>
    <string name="app_name">GeoTag</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="sign_up">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_title">Choose Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edittitlehere">Type your Title here</string>
    <string name="edittitleempty">Please give your database a title :)</string>
    <string name="edittitlechanged">Title is now changed</string>
    <string name="nameChange">Press here to change name</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="markeradded">Marker added</string>
</resources>
