<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">

    <EditText
        android:id="@+id/editTopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/primaryLightColor"
        android:elevation="2dp"
        android:hint="@string/nameChange"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="98dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/editName1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editName2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editName3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editField1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editField2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editField3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/primaryLightColor"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/nameChange"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxEditRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/primaryLightColor"
            android:elevation="2dp"
            android:paddingRight="10dp"
            android:text="@string/red" />

        <CheckBox
            android:id="@+id/checkBoxEditGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/primaryLightColor"
            android:elevation="2dp"
            android:paddingRight="10dp"
            android:text="@string/green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelEditMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/noboxColor"
            android:elevation="6dp"
            android:text="@string/cancel"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveEditMarker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/yesboxColor"
            android:elevation="6dp"
            android:text="@string/save"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>