<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.left4candy.geotag.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/mapViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/back" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/signInLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="207dp"
        android:layout_height="89dp"
        android:layout_marginTop="10dp"
        android:alpha="0.9"
        android:contentDescription="@string/app_name"
        android:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/signInLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/geotag" />

    <Button
        android:id="@+id/signInAsk"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:alpha="0.8"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:elevation="6dp"
        android:onClick="signInButtonClicked"
        android:text="@string/title_activity_login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signInLayout" />

    <Button
        android:id="@+id/signUpAsk"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:elevation="6dp"
        android:onClick="signUpButtonClicked"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInAsk" />

    <RelativeLayout
        android:id="@+id/signInLayout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:elevation="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:alpha="0.6"
            android:background="@color/secondaryColor"
            android:contentDescription="@string/app_name"
            app:srcCompat="@color/common_google_signin_btn_text_dark_default"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="82dp" />

        <LinearLayout
            android:id="@+id/linera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_username"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:elevation="4dp"
                android:hint="@string/prompt_username"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="288dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/prompt_password"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="219dp" />

            <Button
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:elevation="6dp"
                android:onClick="signInClicked"
                android:text="@string/title_activity_login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:visibility="visible" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
